ml component added

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent bg-default navbar-dark headroom headroom--top headroom--pinned">
+<nav id="navbar-main" class="navbar navbar-horizontal navbar-expand-lg navbar-dark bg-default">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/home']">
       <img src="./assets/img/brand/onclinic-logo.png">
