Add verification part to doctor component

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -134,7 +134,7 @@
                           <div class="input-group-prepend">
                             <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                           </div>
-                          <input [(ngModel)]="userRegForm.age" name="age" class="form-control" placeholder="Age"
+                          <input [(ngModel)]="userRegForm.age" name="age" class="form-control" placeholder="Act number"
                             type="text" (focus)="focus=true" (blur)="focus=false">
                         </div>
                       </div>
