--- a/src/app/doctorverification/doctorverification.component.css
+++ b/src/app/doctorverification/doctorverification.component.css
@@ -1,9 +1,9 @@
 .lds-spinner {
     color: official;
     display: inline-block;
-    position: relative;
+    position: center;
     width: 80px;
-    height: 80px;
+    height: 80px; 
   }
   .lds-spinner div {
     transform-origin: 40px 40px;
